# mini_sh

./: CMakeLists.txt  README.md
doc/: mini_sh.1
include/: alias.h  builtins.h  commands.h  executor.h  main.h  minishell.h  parser.h  typedef.h  utils.h
src/: main.c
src/builtins/: alias.c  cd.c  date.c  echo.c  exit.c  export.c  ls.c  ps.c  pwd.c  unset.c  who.c
src/commands/: date.c  ls.c  ps.c  who.c
src/executor/: executor.c
src/parser/: lexer.c  parser.c
src/utils/: alias.c  utils.c
